[tool.poetry]
name = "network-pinger"
version = "2.3.5"
description = "Async network monitoring tool with real-time terminal UI, alerts, and connection quality analysis"
authors = ["meshlg <meshlgfox@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/meshlg/_pinger"
repository = "https://github.com/meshlg/_pinger.git"
keywords = ["network", "monitoring", "ping", "cli", "tui", "dns", "traceroute"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
packages = [
    { include = "pinger" },
    { include = "config", from = "." },
    { include = "core", from = "." },
    { include = "ui_protocols", from = "." },
    { include = "config.py" },
    { include = "main.py" },
    { include = "monitor.py" },
    { include = "ui.py" },
    { include = "alerts.py" },
    { include = "stats_repository.py" },
    { include = "problem_analyzer.py" },
    { include = "route_analyzer.py" },
    { include = "services" },
    { include = "infrastructure" },
]
include = [
    "CHANGELOG.md",
    "LICENSE",
    "assets/*",
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.0.0"
requests = "^2.25.0"
pythonping = "^1.1.0"
prometheus-client = "^0.16.0"
dnspython = "^2.4.0"
psutil = { version = "^5.9.0", optional = true }

[tool.poetry.scripts]
pinger = "pinger:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
